{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 51,
  "lineage": "c67a91ef-1549-5237-8aa3-50f5b85e19d5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d836cd65532f8424",
            "domain": "vpc",
            "id": "eipalloc-0d836cd65532f8424",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-65-1-155-22.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.155.22",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561865586187:internet-gateway/igw-02cc04f8770a35c80",
            "id": "igw-02cc04f8770a35c80",
            "owner_id": "561865586187",
            "vpc_id": "vpc-03051609e619191ca"
          },
          "dependencies": [
            "aws_vpc.CE-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d836cd65532f8424",
            "connectivity_type": "public",
            "id": "nat-0500bd3449e7c4a0d",
            "network_interface_id": "eni-00b755450535997fc",
            "private_ip": "10.0.0.124",
            "public_ip": "65.1.155.22",
            "subnet_id": "subnet-06085888d0516b713"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public_subnet",
            "aws_vpc.CE-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Pri-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01a18be92164fc68a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0500bd3449e7c4a0d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a18be92164fc68a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.NAT",
            "aws_route_table.Private-RT",
            "aws_subnet.public_subnet",
            "aws_vpc.CE-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Pub-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02cc04f8770a35c80",
            "id": "r-rtb-0f649ac0a3b68436e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f649ac0a3b68436e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.Public-RT",
            "aws_vpc.CE-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561865586187:route-table/rtb-01a18be92164fc68a",
            "id": "rtb-01a18be92164fc68a",
            "owner_id": "561865586187",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03051609e619191ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.CE-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561865586187:route-table/rtb-0f649ac0a3b68436e",
            "id": "rtb-0f649ac0a3b68436e",
            "owner_id": "561865586187",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03051609e619191ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.CE-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a748f189507a1897",
            "route_table_id": "rtb-01a18be92164fc68a",
            "subnet_id": "subnet-0c6a2f7124ea6f10c"
          },
          "dependencies": [
            "aws_route_table.Private-RT",
            "aws_subnet.private_subnet",
            "aws_vpc.CE-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebacdbde3a9da9d8",
            "route_table_id": "rtb-01a18be92164fc68a",
            "subnet_id": "subnet-09affc608b68f01a4"
          },
          "dependencies": [
            "aws_route_table.Private-RT",
            "aws_subnet.private_subnet",
            "aws_vpc.CE-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f060544456394e7a",
            "route_table_id": "rtb-0f649ac0a3b68436e",
            "subnet_id": "subnet-06085888d0516b713"
          },
          "dependencies": [
            "aws_route_table.Public-RT",
            "aws_subnet.public_subnet",
            "aws_vpc.CE-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e444c83dbe004273",
            "route_table_id": "rtb-0f649ac0a3b68436e",
            "subnet_id": "subnet-038087c539d3dc4f1"
          },
          "dependencies": [
            "aws_route_table.Public-RT",
            "aws_subnet.public_subnet",
            "aws_vpc.CE-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561865586187:subnet/subnet-0c6a2f7124ea6f10c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6a2f7124ea6f10c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "561865586187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03051609e619191ca"
          },
          "dependencies": [
            "aws_vpc.CE-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561865586187:subnet/subnet-09affc608b68f01a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09affc608b68f01a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "561865586187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03051609e619191ca"
          },
          "dependencies": [
            "aws_vpc.CE-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561865586187:subnet/subnet-06085888d0516b713",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06085888d0516b713",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "561865586187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03051609e619191ca"
          },
          "dependencies": [
            "aws_vpc.CE-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561865586187:subnet/subnet-038087c539d3dc4f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038087c539d3dc4f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "561865586187",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03051609e619191ca"
          },
          "dependencies": [
            "aws_vpc.CE-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CE-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:561865586187:vpc/vpc-03051609e619191ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb0441d30dd15cc3",
            "default_route_table_id": "rtb-06cb7dc41940afd62",
            "default_security_group_id": "sg-0af8e949c0cf7fa51",
            "dhcp_options_id": "dopt-05b4acd3f26b1b818",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03051609e619191ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06cb7dc41940afd62",
            "owner_id": "561865586187"
          }
        }
      ]
    }
  ]
}